--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ http {
         server_name 88.218.168.157; 
 
         location / {
-            proxy_pass http://nextjs-app:3000; # Проксируем на контейнер с Next.js
+            proxy_pass http://nextjs-app:3000; 
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -15,6 +15,3 @@ http {
         }
     }
 }
-
-
-88.218.168.157
