--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     image: nginx:latest
     ports:
       - '80:80'
+    environment:
+      NEXT_PUBLIC_API_URL: 'http://localhost:3000'
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
