--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        NEXT_PUBLIC_API_URL: 'http://localhost:3000'
     environment:
       - NODE_ENV=production
     restart: always
@@ -13,8 +15,6 @@ services:
     image: nginx:latest
     ports:
       - '80:80'
-    environment:
-      NEXT_PUBLIC_API_URL: 'http://localhost:3000'
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
