--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "bartech",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "classnames": "^2.5.1",
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-icons": "^5.3.0"
-  },
-  "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3"
-  }
+	"name": "bartech",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"classnames": "^2.5.1",
+		"next": "15.0.3",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-hook-form": "^7.53.2",
+		"react-icons": "^5.3.0",
+		"react-select": "^5.8.3",
+		"react-text-mask": "^5.5.0",
+		"swiper": "^11.1.14"
+	},
+	"devDependencies": {
+		"eslint": "^8",
+		"eslint-config-next": "15.0.3"
+	}
 }
