--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"axios": "^1.7.7",
 		"classnames": "^2.5.1",
 		"next": "15.0.3",
 		"react": "^18.3.1",
