под домен  nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,25 @@ events {}
 http {
     server {
         listen 80;
-        server_name 88.218.168.157; 
+        server_name cvirko-vadim.ru; 
+
+        location / {
+            proxy_pass http://nextjs-app:3000; 
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
+}
+
+events {}
+
+http {
+    server {
+        listen 80;
+        server_name phone.cvirko-vadim.ru; 
 
         location / {
             proxy_pass http://nextjs-app:3000; 
