--- a/nginx.conf
+++ b/nginx.conf
@@ -24,7 +24,7 @@ http {
         server_name phone.cvirko-vadim.ru; 
 
         location / {
-            proxy_pass http://nextjs-app:3000; 
+            proxy_pass http://nextjs-app:3000/phone; 
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
