--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,7 @@
 events {}
 
 http {
+    # Основной сервер для домена cvirko-vadim.ru
     server {
         listen 80;
         server_name cvirko-vadim.ru; 
@@ -14,11 +15,8 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
     }
-}
 
-events {}
-
-http {
+    # Сервер для поддомена phone.cvirko-vadim.ru
     server {
         listen 80;
         server_name phone.cvirko-vadim.ru; 
