--- a/nginx.conf
+++ b/nginx.conf
@@ -6,11 +6,27 @@ http {
         listen 80;
         server_name cvirko-vadim.ru; 
 
+        # Проксирование всех запросов на основной домен
         location / {
-            proxy_pass http://nextjs-app:3000; 
+            proxy_pass http://nextjs-app:3000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        # Обработка статических файлов (стилей, скриптов и картинок)
+        location /_next/ {
+            proxy_pass http://nextjs-app:3000/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs-app:3000/static/;
+            proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
@@ -21,11 +37,27 @@ http {
         listen 80;
         server_name phone.cvirko-vadim.ru; 
 
+        # Проксирование запросов для поддомена на маршрут /phone
         location / {
-            proxy_pass http://nextjs-app:3000/phone; 
+            proxy_pass http://nextjs-app:3000/phone;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        # Обработка статических файлов (стилей, скриптов и картинок) для поддомена
+        location /_next/ {
+            proxy_pass http://nextjs-app:3000/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs-app:3000/static/;
+            proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
