--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,33 @@
 events {}
 
 http {
-    # Основной сервер для домена cvirko-vadim.ru
+    # Сервер для HTTP-запросов
     server {
         listen 80;
-        server_name cvirko-vadim.ru; 
+        server_name cvirko-vadim.ru phone.cvirko-vadim.ru;
+
+        # Маршрут для проверки домена Certbot
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        # Перенаправление всех запросов на HTTPS
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    # Сервер для HTTPS-запросов основного домена
+    server {
+        listen 443 ssl;
+        server_name cvirko-vadim.ru;
+
+        # Пути к SSL-сертификатам
+        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
 
         # Проксирование всех запросов на основной домен
         location / {
@@ -16,7 +39,7 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        # Обработка статических файлов (стилей, скриптов и картинок)
+        # Обработка статических файлов
         location /_next/ {
             proxy_pass http://nextjs-app:3000/_next/;
             proxy_http_version 1.1;
@@ -32,10 +55,17 @@ http {
         }
     }
 
-    # Сервер для поддомена phone.cvirko-vadim.ru
+    # Сервер для HTTPS-запросов поддомена
     server {
-        listen 80;
-        server_name phone.cvirko-vadim.ru; 
+        listen 443 ssl;
+        server_name phone.cvirko-vadim.ru;
+
+        # Пути к SSL-сертификатам
+        ssl_certificate /etc/letsencrypt/live/phone.cvirko-vadim.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/phone.cvirko-vadim.ru/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
 
         # Проксирование запросов для поддомена на маршрут /phone
         location / {
@@ -47,7 +77,7 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        # Обработка статических файлов (стилей, скриптов и картинок) для поддомена
+        # Обработка статических файлов
         location /_next/ {
             proxy_pass http://nextjs-app:3000/_next/;
             proxy_http_version 1.1;
