--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,18 @@ services:
     image: nginx:latest
     ports:
       - '80:80'
+      - '443:443'
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     depends_on:
       - nextjs-app
     restart: always
+
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'certbot certonly --webroot --webroot-path=/var/www/certbot --agree-tos --email your-email@example.com -d cvirko-vadim.ru -d phone.cvirko-vadim.ru && trap exit TERM; while :; do sleep 6h & wait $${!}; certbot renew; done;'"
