--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,4 +29,4 @@ services:
     volumes:
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'certbot certonly --webroot --webroot-path=/var/www/certbot --agree-tos --email your-email@example.com -d cvirko-vadim.ru -d phone.cvirko-vadim.ru && trap exit TERM; while :; do sleep 6h & wait $${!}; certbot renew; done;'"
+    entrypoint: "/bin/sh -c 'certbot certonly --webroot --webroot-path=/var/www/certbot --agree-tos --email cvi-vadim@yandex.ru -d cvirko-vadim.ru -d phone.cvirko-vadim.ru && trap exit TERM; while :; do sleep 6h & wait $${!}; certbot renew; done;'"
