--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,7 @@ http {
             root /var/www/certbot;
         }
 
-        # Перенаправление всех запросов на HTTPS
+        # Перенаправление всех остальных запросов на HTTPS
         location / {
             return 301 https://$host$request_uri;
         }
@@ -19,7 +19,7 @@ http {
 
     # Сервер для HTTPS-запросов основного домена
     server {
-        listen 443 ssl;
+        listen 443 ssl http2;
         server_name cvirko-vadim.ru;
 
         # Пути к SSL-сертификатам
@@ -28,8 +28,12 @@ http {
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
 
-        # Проксирование всех запросов на основной домен
+        # HSTS (HTTP Strict Transport Security)
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+        # Проксирование запросов для основного домена
         location / {
             proxy_pass http://nextjs-app:3000;
             proxy_http_version 1.1;
@@ -45,6 +49,9 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
+
+            # Кеширование для статики
+            add_header Cache-Control "public, max-age=31536000";
         }
 
         location /static/ {
@@ -52,12 +59,15 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
+
+            # Кеширование для статики
+            add_header Cache-Control "public, max-age=31536000";
         }
     }
 
     # Сервер для HTTPS-запросов поддомена
     server {
-        listen 443 ssl;
+        listen 443 ssl http2;
         server_name phone.cvirko-vadim.ru;
 
         # Пути к SSL-сертификатам
@@ -66,8 +76,12 @@ http {
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
 
-        # Проксирование запросов для поддомена на маршрут /phone
+        # HSTS
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+        # Проксирование запросов для поддомена
         location / {
             proxy_pass http://nextjs-app:3000/phone;
             proxy_http_version 1.1;
@@ -83,6 +97,9 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
+
+            # Кеширование для статики
+            add_header Cache-Control "public, max-age=31536000";
         }
 
         location /static/ {
@@ -90,6 +107,9 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
+
+            # Кеширование для статики
+            add_header Cache-Control "public, max-age=31536000";
         }
     }
 }
