--- a/nginx.conf
+++ b/nginx.conf
@@ -19,7 +19,8 @@ http {
 
     # Сервер для HTTPS-запросов основного домена
     server {
-        listen 443 ssl http2;
+        listen 443 ssl;
+        http2 on;
         server_name cvirko-vadim.ru;
 
         # Пути к SSL-сертификатам
@@ -67,7 +68,8 @@ http {
 
     # Сервер для HTTPS-запросов поддомена
     server {
-        listen 443 ssl http2;
+        listen 443 ssl;
+        http2 on;
         server_name phone.cvirko-vadim.ru;
 
         # Пути к SSL-сертификатам
