add ip server hoster

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,8 @@ http {
     # Основной сервер для домена cvirko-vadim.ru
     server {
         listen 80;
-        server_name cvirko-vadim.ru; 
+        # server_name cvirko-vadim.ru; 
+        server_name 178.172.138.201
 
         # Проксирование всех запросов на основной домен
         location / {
@@ -35,7 +36,8 @@ http {
     # Сервер для поддомена phone.cvirko-vadim.ru
     server {
         listen 80;
-        server_name phone.cvirko-vadim.ru; 
+        # server_name phone.cvirko-vadim.ru; 
+        server_name phone.178.172.138.201
 
         # Проксирование запросов для поддомена на маршрут /phone
         location / {
