Добавлена точка с запятой в server_name.
proxy_pass теперь использует upstream, что делает конфиг проще для чтения.

Удален поддомен phone из server_name, так как IP-адрес не поддерживает поддомены.

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,15 +1,16 @@
 events {}
 
 http {
-    # Основной сервер для домена cvirko-vadim.ru
+    upstream nextjs {
+        server nextjs-app:3000;
+    }
+
     server {
         listen 80;
-        # server_name cvirko-vadim.ru; 
-        server_name 88.218.168.157
+        server_name 88.218.168.157;
 
-        # Проксирование всех запросов на основной домен
         location / {
-            proxy_pass http://nextjs-app:3000;
+            proxy_pass http://nextjs;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -17,31 +18,27 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        # Обработка статических файлов (стилей, скриптов и картинок)
         location /_next/ {
-            proxy_pass http://nextjs-app:3000/_next/;
+            proxy_pass http://nextjs/_next/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
 
         location /static/ {
-            proxy_pass http://nextjs-app:3000/static/;
+            proxy_pass http://nextjs/static/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
     }
 
-    # Сервер для поддомена phone.cvirko-vadim.ru
     server {
         listen 80;
-        # server_name phone.cvirko-vadim.ru; 
-        server_name phone.88.218.168.157
+        server_name 88.218.168.157;
 
-        # Проксирование запросов для поддомена на маршрут /phone
         location / {
-            proxy_pass http://nextjs-app:3000/phone;
+            proxy_pass http://nextjs/phone;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -49,16 +46,15 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        # Обработка статических файлов (стилей, скриптов и картинок) для поддомена
         location /_next/ {
-            proxy_pass http://nextjs-app:3000/_next/;
+            proxy_pass http://nextjs/_next/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
 
         location /static/ {
-            proxy_pass http://nextjs-app:3000/static/;
+            proxy_pass http://nextjs/static/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
