--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ http {
 
     server {
         listen 80;
-        server_name 178.172.138.201/
+        server_name 178.172.138.201;
 
         location / {
             proxy_pass http://nextjs;
@@ -35,7 +35,7 @@ http {
 
     server {
         listen 80;
-        server_name 178.172.138.201/
+        server_name 178.172.138.201;
 
         location / {
             proxy_pass http://nextjs/phone;
