--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,20 @@ http {
 
     server {
         listen 80;
-        server_name 178.172.138.201;
+        server_name cvirko-vadim.ru;
+
+        # Редирект HTTP -> HTTPS
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl;
+        server_name cvirko-vadim.ru;
+
+        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
             proxy_pass http://nextjs;
@@ -35,7 +48,20 @@ http {
 
     server {
         listen 80;
-        server_name 178.172.138.201;
+        server_name phone.cvirko-vadim.ru;
+
+        # Редирект HTTP -> HTTPS
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl;
+        server_name phone.cvirko-vadim.ru;
+
+        ssl_certificate /etc/letsencrypt/live/phone.cvirko-vadim.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/phone.cvirko-vadim.ru/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
             proxy_pass http://nextjs/phone;
