--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - '80:80'
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
+        - /etc/letsencrypt:/etc/letsencrypt:ro
     depends_on:
       - nextjs-app
     restart: always
