--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,13 @@ services:
     depends_on:
       - nextjs-app
     restart: always
+
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - /etc/letsencrypt:/etc/letsencrypt
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    environment:
+      - CERTBOT_EMAIL=youremail@example.com
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+    command: ['sh', '-c', 'nginx -s reload && tail -f /dev/null']
