--- a/nginx.conf
+++ b/nginx.conf
@@ -46,45 +46,46 @@ http {
         }
     }
 
-    # server {
-    #     listen 80;
-    #     server_name phone.cvirko-vadim.ru;
+    server {
+        listen 80;
+        server_name phone.cvirko-vadim.ru;
 
-    #     # Редирект HTTP -> HTTPS
-    #     return 301 https://$host$request_uri;
-    # }
+        # Редирект HTTP -> HTTPS
+        return 301 https://$host$request_uri;
+    }
 
-    # server {
-    #     listen 443 ssl;
-    #     server_name phone.cvirko-vadim.ru;
+    server {
+        listen 443 ssl;
+        server_name phone.cvirko-vadim.ru;
 
-    #     ssl_certificate /etc/letsencrypt/live/phone.cvirko-vadim.ru/fullchain.pem;
-    #     ssl_certificate_key /etc/letsencrypt/live/phone.cvirko-vadim.ru/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/phone.cvirko-vadim.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/phone.cvirko-vadim.ru/privkey.pem;
 
-    #     ssl_protocols TLSv1.2 TLSv1.3;
-    #     ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
 
-    #     location / {
-    #         proxy_pass http://nextjs/phone;
-    #         proxy_http_version 1.1;
-    #         proxy_set_header Upgrade $http_upgrade;
-    #         proxy_set_header Connection 'upgrade';
-    #         proxy_set_header Host $host;
-    #         proxy_cache_bypass $http_upgrade;
-    #     }
+        # Проксируем запросы с phone.cvirko-vadim.ru на /phone
+        location / {
+            proxy_pass http://nextjs/phone;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
 
-    #     location /_next/ {
-    #         proxy_pass http://nextjs/_next/;
-    #         proxy_http_version 1.1;
-    #         proxy_set_header Host $host;
-    #         proxy_cache_bypass $http_upgrade;
-    #     }
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
 
-    #     location /static/ {
-    #         proxy_pass http://nextjs/static/;
-    #         proxy_http_version 1.1;
-    #         proxy_set_header Host $host;
-    #         proxy_cache_bypass $http_upgrade;
-    #     }
-    # }
+        location /static/ {
+            proxy_pass http://nextjs/static/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
 }
