--- a/nginx.conf
+++ b/nginx.conf
@@ -22,6 +22,7 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
+        # Прокси для всех страниц, включая /phone, /tv, /50discount
         location / {
             proxy_pass http://nextjs;
             proxy_http_version 1.1;
@@ -44,16 +45,44 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
+
+        # Прокси для конкретных страниц (если они есть в Next.js)
+        location /phone {
+            proxy_pass http://nextjs/phone;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /tv {
+            proxy_pass http://nextjs/tv;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /50discount {
+            proxy_pass http://nextjs/50discount;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
     }
 
+    # Редирект HTTP -> HTTPS для поддомена phone
     server {
         listen 80;
         server_name phone.cvirko-vadim.ru;
-
-        # Редирект HTTP -> HTTPS
         return 301 https://$host$request_uri;
     }
 
+    # Настройки для поддомена phone
     server {
         listen 443 ssl;
         server_name phone.cvirko-vadim.ru;
@@ -64,7 +93,6 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        # Проксируем запросы с phone.cvirko-vadim.ru на /phone
         location / {
             proxy_pass http://nextjs/phone;
             proxy_http_version 1.1;
