--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"axios": "^1.7.7",
 		"classnames": "^2.5.1",
+		"framer-motion": "^11.11.17",
 		"next": "15.0.3",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
