--- a/nginx.conf
+++ b/nginx.conf
@@ -5,24 +5,23 @@ http {
         server nextjs-app:3000;
     }
 
+    # Редирект HTTP -> HTTPS для основного домена
     server {
         listen 80;
-        server_name cvirko-vadim.ru;
-
-        # Редирект HTTP -> HTTPS
+        server_name technobar.by;
         return 301 https://$host$request_uri;
     }
 
+    # Основной сервер для technobar.by
     server {
         listen 443 ssl;
-        server_name cvirko-vadim.ru;
+        server_name technobar.by;
 
-        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/technobar.by/privkey.pem;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        # Прокси для всех страниц, включая /phone, /tv, /50discount
         location / {
             proxy_pass http://nextjs;
             proxy_http_version 1.1;
@@ -45,51 +44,203 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
-
-        # Прокси для конкретных страниц (если они есть в Next.js)
-        location /phone {
-            proxy_pass http://nextjs/phone;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /tv {
-            proxy_pass http://nextjs/tv;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /50discount {
-            proxy_pass http://nextjs/50discount;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
     }
 
-    # Редирект HTTP -> HTTPS для поддомена phone
+    # Прокси для поддомена laptop1.technobar.by
     server {
         listen 80;
-        server_name phone.cvirko-vadim.ru;
+        server_name laptop1.technobar.by;
         return 301 https://$host$request_uri;
     }
 
-    # Настройки для поддомена phone
     server {
         listen 443 ssl;
-        server_name phone.cvirko-vadim.ru;
+        server_name laptop1.technobar.by;
 
-        ssl_certificate /etc/letsencrypt/live/phone.cvirko-vadim.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/phone.cvirko-vadim.ru/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/laptop1.technobar.by/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/laptop1.technobar.by/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
 
+        location / {
+            proxy_pass http://nextjs/laptop1;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs/static/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
+
+    # Прокси для поддомена tv1.technobar.by
+    server {
+        listen 80;
+        server_name tv1.technobar.by;
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl;
+        server_name tv1.technobar.by;
+
+        ssl_certificate /etc/letsencrypt/live/tv1.technobar.by/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/tv1.technobar.by/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location / {
+            proxy_pass http://nextjs/tv1;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs/static/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
+
+    # Прокси для поддомена phone2.technobar.by
+    server {
+        listen 80;
+        server_name phone2.technobar.by;
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl;
+        server_name phone2.technobar.by;
+
+        ssl_certificate /etc/letsencrypt/live/phone2.technobar.by/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/phone2.technobar.by/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location / {
+            proxy_pass http://nextjs/phone2;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs/static/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
+    server {
+        listen 80;
+        server_name laptop2.technobar.by;
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl;
+        server_name laptop2.technobar.by;
+
+        ssl_certificate /etc/letsencrypt/live/laptop2.technobar.by/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/laptop2.technobar.by/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location / {
+            proxy_pass http://nextjs/laptop2;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs/static/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
+    server {
+        listen 443 ssl;
+        server_name tv2.technobar.by;
+
+        ssl_certificate /etc/letsencrypt/live/tv2.technobar.by/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/tv2.technobar.by/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location / {
+            proxy_pass http://nextjs/tv2;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs/static/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
+    server {
+        listen 443 ssl;
+        server_name phone.technobar.by;
+
+        ssl_certificate /etc/letsencrypt/live/phone.technobar.by/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/phone.technobar.by/privkey.pem;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
@@ -116,4 +267,9 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
     }
+
+    # Добавьте аналогичные блоки для laptop2.technobar.by, tv2.technobar.by и других поддоменов, например:
+    # Поддомен laptop2.technobar.by -> technobar.by/laptop2
+    # Поддомен tv2.technobar.by -> technobar.by/tv2
+    # Поддомен phone.technobar.by -> technobar.by/phone
 }
