--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3'
 services:
   nextjs-app:
     build:
@@ -17,6 +18,7 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
+      - ./www:/var/www/certbot # Это добавление для валидации webroot
     depends_on:
       - nextjs-app
     restart: always
@@ -25,7 +27,7 @@ services:
     image: certbot/certbot
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./www:/var/www/certbot # Это добавление для валидации webroot
     environment:
       - CERTBOT_EMAIL=youremail@example.com
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
