--- a/nginx.conf
+++ b/nginx.conf
@@ -23,7 +23,7 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
-            proxy_pass http://nextjs;
+            proxy_pass http://nextjs;  # Без поддоменов
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -46,23 +46,26 @@ http {
         }
     }
 
-    # Прокси для всех поддоменов
+    # Прокси для поддоменов
     server {
         listen 443 ssl;
         server_name laptop1.technobar.by laptop2.technobar.by tv1.technobar.by tv2.technobar.by phone.technobar.by phone2.technobar.by;
 
-        ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem; # Используем общий сертификат
+        ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;  # Используем общий сертификат
         ssl_certificate_key /etc/letsencrypt/live/technobar.by/privkey.pem;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
             # Прокси для всех поддоменов на разные пути
-            proxy_pass http://nextjs/$host;  # Здесь $host будет подставлять имя поддомена
+            # Здесь предполагается, что приложение на Next.js правильно обрабатывает пути
+            proxy_pass http://nextjs/$host;  # $host будет подставлять поддомен
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $remote_addr;  # Дополнительный заголовок
+            proxy_set_header X-Forwarded-Proto $scheme;  # Дополнительный заголовок
             proxy_cache_bypass $http_upgrade;
         }
 
