--- a/nginx.conf
+++ b/nginx.conf
@@ -23,7 +23,7 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
-            proxy_pass http://nextjs;  # Без поддоменов
+            proxy_pass http://nextjs;  # Основной домен
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -46,26 +46,158 @@ http {
         }
     }
 
-    # Прокси для поддоменов
+    # Прокси для поддомена laptop1.technobar.by
     server {
         listen 443 ssl;
-        server_name laptop1.technobar.by laptop2.technobar.by tv1.technobar.by tv2.technobar.by phone.technobar.by phone2.technobar.by;
+        server_name laptop1.technobar.by;
 
-        ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;  # Используем общий сертификат
+        ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/technobar.by/privkey.pem;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
-            # Прокси для всех поддоменов на разные пути
-            # Здесь предполагается, что приложение на Next.js правильно обрабатывает пути
-            proxy_pass http://nextjs/$host;  # $host будет подставлять поддомен
+            proxy_pass http://nextjs/laptop1;  # Явный путь для laptop1
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $remote_addr;  # Дополнительный заголовок
-            proxy_set_header X-Forwarded-Proto $scheme;  # Дополнительный заголовок
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs/static/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
+
+    # Прокси для поддомена laptop2.technobar.by
+    server {
+        listen 443 ssl;
+        server_name laptop2.technobar.by;
+
+        ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/technobar.by/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location / {
+            proxy_pass http://nextjs/laptop2;  # Явный путь для laptop2
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs/static/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
+
+    # Прокси для поддомена tv1.technobar.by
+    server {
+        listen 443 ssl;
+        server_name tv1.technobar.by;
+
+        ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/technobar.by/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location / {
+            proxy_pass http://nextjs/tv1;  # Явный путь для tv1
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs/static/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
+
+    # Прокси для поддомена phone.technobar.by
+    server {
+        listen 443 ssl;
+        server_name phone.technobar.by;
+
+        ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/technobar.by/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location / {
+            proxy_pass http://nextjs/phone;  # Явный путь для phone
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs/static/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
+
+    # Прокси для поддомена phone2.technobar.by
+    server {
+        listen 443 ssl;
+        server_name phone2.technobar.by;
+
+        ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/technobar.by/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location / {
+            proxy_pass http://nextjs/phone2;  # Явный путь для phone2
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
 
@@ -87,7 +219,7 @@ http {
     # Прокси для всех поддоменов на HTTP, чтобы редиректить на HTTPS
     server {
         listen 80;
-        server_name laptop1.technobar.by laptop2.technobar.by tv1.technobar.by tv2.technobar.by phone.technobar.by phone2.technobar.by;
+        server_name *.technobar.by;
         return 301 https://$host$request_uri;
     }
 }
