--- a/nginx.conf
+++ b/nginx.conf
@@ -117,7 +117,7 @@ http {
     # Прокси для поддомена tv1.technobar.by
     server {
         listen 443 ssl;
-        server_name tv1.technobar.by;
+        server_name tv.technobar.by;
 
         ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/technobar.by/privkey.pem;
@@ -125,7 +125,7 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
-            proxy_pass http://nextjs/tv1;  # Явный путь для tv1
+            proxy_pass http://nextjs/tv;  # Явный путь для tv1
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -185,7 +185,7 @@ http {
     # Прокси для поддомена phone2.technobar.by
     server {
         listen 443 ssl;
-        server_name phone2.technobar.by;
+        server_name phone1.technobar.by;
 
         ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/technobar.by/privkey.pem;
@@ -193,7 +193,7 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
-            proxy_pass http://nextjs/phone2;  # Явный путь для phone2
+            proxy_pass http://nextjs/phone1;  # Явный путь для phone2
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
