--- a/nginx.conf
+++ b/nginx.conf
@@ -23,7 +23,8 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
-            proxy_pass http://nextjs;  # Основной домен
+            # Прокси для всех путей на technobar.by
+            proxy_pass http://nextjs;  # Прокси для всех путей на корневом домене
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -46,10 +47,10 @@ http {
         }
     }
 
-    # Прокси для поддомена laptop1.technobar.by
+    # Прокси для поддоменов
     server {
         listen 443 ssl;
-        server_name laptop1.technobar.by;
+        server_name laptop1.technobar.by laptop2.technobar.by tv.technobar.by tv2.technobar.by phone.technobar.by phone1.technobar.by;
 
         ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/technobar.by/privkey.pem;
@@ -57,143 +58,7 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
-            proxy_pass http://nextjs/laptop1;  # Явный путь для laptop1
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /_next/ {
-            proxy_pass http://nextjs/_next/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /static/ {
-            proxy_pass http://nextjs/static/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-    }
-
-    # Прокси для поддомена laptop2.technobar.by
-    server {
-        listen 443 ssl;
-        server_name laptop2.technobar.by;
-
-        ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/technobar.by/privkey.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-
-        location / {
-            proxy_pass http://nextjs/laptop2;  # Явный путь для laptop2
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /_next/ {
-            proxy_pass http://nextjs/_next/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /static/ {
-            proxy_pass http://nextjs/static/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-    }
-
-    # Прокси для поддомена tv1.technobar.by
-    server {
-        listen 443 ssl;
-        server_name tv.technobar.by;
-
-        ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/technobar.by/privkey.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-
-        location / {
-            proxy_pass http://nextjs/tv;  # Явный путь для tv1
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /_next/ {
-            proxy_pass http://nextjs/_next/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /static/ {
-            proxy_pass http://nextjs/static/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-    }
-
-    # Прокси для поддомена phone.technobar.by
-    server {
-        listen 443 ssl;
-        server_name phone.technobar.by;
-
-        ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/technobar.by/privkey.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-
-        location / {
-            proxy_pass http://nextjs/phone;  # Явный путь для phone
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /_next/ {
-            proxy_pass http://nextjs/_next/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /static/ {
-            proxy_pass http://nextjs/static/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-    }
-
-    # Прокси для поддомена phone2.technobar.by
-    server {
-        listen 443 ssl;
-        server_name phone1.technobar.by;
-
-        ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/technobar.by/privkey.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-
-        location / {
-            proxy_pass http://nextjs/phone1;  # Явный путь для phone2
+            proxy_pass http://nextjs/$host;  # Прокси для каждого поддомена на отдельный путь
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
