--- a/nginx.conf
+++ b/nginx.conf
@@ -23,7 +23,6 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
-            # Прокси для всех путей на technobar.by
             proxy_pass http://nextjs;  # Прокси для всех путей на корневом домене
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -50,7 +49,7 @@ http {
     # Прокси для поддоменов
     server {
         listen 443 ssl;
-        server_name laptop1.technobar.by laptop2.technobar.by tv.technobar.by tv2.technobar.by phone.technobar.by phone1.technobar.by;
+        server_name phone.technobar.by laptop1.technobar.by laptop2.technobar.by tv.technobar.by tv2.technobar.by phone1.technobar.by;
 
         ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/technobar.by/privkey.pem;
@@ -58,7 +57,27 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
-            proxy_pass http://nextjs/$host;  # Прокси для каждого поддомена на отдельный путь
+            # Прокси для поддомена phone1.technobar.by на /phone1
+            if ($host = "phone.technobar.by") {
+                proxy_pass http://nextjs/phone1;
+            }
+            # Прокси для других поддоменов на соответствующие пути
+            if ($host = "laptop1.technobar.by") {
+                proxy_pass http://nextjs/laptop1;
+            }
+            if ($host = "laptop2.technobar.by") {
+                proxy_pass http://nextjs/laptop2;
+            }
+            if ($host = "tv.technobar.by") {
+                proxy_pass http://nextjs/tv;
+            }
+            if ($host = "tv2.technobar.by") {
+                proxy_pass http://nextjs/tv2;
+            }
+            if ($host = "phone1.technobar.by") {
+                proxy_pass http://nextjs/phone2;
+            }
+
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
