--- a/nginx.conf
+++ b/nginx.conf
@@ -22,8 +22,19 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
+        # Основная страница
         location / {
             proxy_pass http://nextjs;  # Прокси для всех путей на корневом домене
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        # Обработка динамических страниц (например, /1phonefree)
+        location ~ ^/([a-zA-Z0-9-]+) {
+            proxy_pass http://nextjs/$1;  # Прокси для динамических страниц
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -49,35 +60,17 @@ http {
     # Прокси для поддоменов
     server {
         listen 443 ssl;
-        server_name phone.technobar.by laptop1.technobar.by laptop2.technobar.by tv.technobar.by tv2.technobar.by phone1.technobar.by;
+        server_name phone.technobar.by laptop1.technobar.by laptop2.technobar.by tv1.technobar.by tv2.technobar.by phone2.technobar.by phone2.technobar.by;
 
         ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/technobar.by/privkey.pem;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
+        # Прокси для поддоменов
         location / {
-            # Прокси для поддомена phone1.technobar.by на /phone1
-            if ($host = "phone.technobar.by") {
-                proxy_pass http://nextjs/phone1;
-            }
-            # Прокси для других поддоменов на соответствующие пути
-            if ($host = "laptop1.technobar.by") {
-                proxy_pass http://nextjs/laptop1;
-            }
-            if ($host = "laptop2.technobar.by") {
-                proxy_pass http://nextjs/laptop2;
-            }
-            if ($host = "tv.technobar.by") {
-                proxy_pass http://nextjs/tv;
-            }
-            if ($host = "tv2.technobar.by") {
-                proxy_pass http://nextjs/tv2;
-            }
-            if ($host = "phone1.technobar.by") {
-                proxy_pass http://nextjs/phone2;
-            }
-
+            # Прокси для поддоменов на разные пути в Next.js
+            proxy_pass http://nextjs/$host;  # $host заменяется на имя поддомена
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
